Fix menu-toggle bug on mobile.

--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -143,4 +143,8 @@ to { -webkit-transform: rotate(360deg);}
 @-moz-keyframes spinm {
 from { -moz-transform: rotate(0deg);}
 to { -moz-transform: rotate(360deg);}
-} 
+}
+
+.navbar-toggle {
+    z-index: 1100;
+}
